k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teyvat-takeout
  labels:
    name: teyvat-takeout
    environment: production
