k8s/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: teyvat-mongodb
  namespace: teyvat-takeout
  labels:
    app: teyvat-mongodb
    tier: database
spec:
  serviceName: "teyvat-mongodb-service"
  replicas: 1
  selector:
    matchLabels:
      app: teyvat-mongodb
  template:
    metadata:
      labels:
        app: teyvat-mongodb
        tier: database
    spec:
      containers:
        - name: mongodb
          image: mongo:7.0-jammy
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
  volumeClaimTemplates:
    - metadata:
        name: mongodb-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
