k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teyvat-mongodb
  namespace: teyvat-takeout
  labels:
    app: teyvat-mongodb
    tier: database
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo
  selector:
    app: teyvat-mongodb
